# wm

./: .clang-format  .clang-tidy  .cmake-format.yaml  .gitignore  CMakeLists.txt  Taskfile.yml  conanfile.py  flake.nix
cmake/: ProjectSettings.cmake  ProjectVersion.cmake
data/config/: config.cue  config.json  schema.cue
profiles/: gcc13_x64
src/: CMakeLists.txt  main.cpp  types.h  version.h
tests/: CMakeLists.txt  test_basic.cpp
